# ethercat_motor_msgs

./: CMakeLists.txt  LICENSE  package.xml
include/ethercat_motor_msgs/: ethercat_motor_msgs.h
msg/: MotorCtrlMessage.msg  MotorStatusMessage.msg
