<?xml version="1.0"?>
<package format="2">
  <name>ethercat_motor_msgs</name>
  <version>1.0.0</version>
  <description>Definition of ETHERCAT motor msgs</description>

  <maintainer email="sneelaksh@ethz.ch">Neelaksh Singh</maintainer>
  <maintainer email="cehmke@ethz.ch">Claas Ehmke</maintainer>
  <license>BSD-3-Clause</license>
  <author email="sneelaksh@ethz.ch">Neelaksh Singh</author>
  <author email="cehmke@ethz.ch">Claas Ehmke</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--For loading custom messages-->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <!--Other depends-->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>